<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flood Monitor</string>
    <string name="text_Upload">Upload</string>
    <string name="text_PickAnEvent">Pick an event</string>
    <string name="text_PlaceMarker">Place marker</string>
    <string name="text_Refresh">Refresh</string>
    <string name="text_Settings">Settings</string>
    <string name="text_Help">Help</string>
    <string name="text_About">About</string>
    <string name="text_Apply">Apply</string>
    <string name="text_Download">Download</string>
    <string name="text_Exit">Exit</string>
    <string name="text_Cancel">Cancel</string>
    <string name="text_Latitude">Latitude: </string>
    <string name="text_Longitude">Longitude: </string>
    <string name="text_ObservationDateTime">Observation Date &amp; Time: </string>
    <string name="text_ObservationDateTime_Required">Observation Date &amp; Time: (Required)</string>
    <string name="text_Email_Required">Email: (Required)</string>
    <string name="text_Date">Date</string>
    <string name="text_Time">Time</string>
    <string name="text_Severity_Required">Severity: (Required)</string>
    <string name="text_CoverType">Type of visible cover: </string>
    <string name="text_CoverHeight">Cover height: </string>
    <string name="text_Address">Address: </string>
    <string name="text_File">File: </string>
    <string name="text_Page">Page</string>
    <string name="text_Continue">Continue</string>
    <string name="text_Unclustered">Unclustered</string>
    <string name="text_YourComment">Your comments: </string>
    <string name="text_Picture">Picture: </string>
    <string name="text_PictureLoading">Loading picture...</string>
    <string name="text_GettingListofRegions">Downloading the list of regions</string>
    <string name="text_GettingListofEvents">Dowloading the list of events</string>
    <string name="text_GettingDataofEvent">Downloading data for this event</string>
    <string name="text_ChooseFile">ChooseFile</string>
    <string name="text_Submit">Submit</string>
    <string name="text_AboutURL">http://flood.cs.ndsu.nodak.edu/info.html</string>
    <string name="text_Title">Title</string>
    <string name="text_Description">Description</string>
    <string name="pref_GPSLocation">GPS &amp; Location</string>
    <string name="pref_GPSEnabled_title">GPS Enabled</string>
    <string name="pref_PagesEnabled_title">Load markers by parts</string>
    <string name="pref_UpdateInterval_title">Update interval</string>
    <string name="pref_UpdateInterval_summary">Define how often location updates will be performed</string>
    <string name="pref_UpdateNow_title">Update now</string>
    <string name="pref_UpdateNow_summary">Press here to update your location</string>
    <string name="pref_UseZoomControl_title">Enable zoom buttons</string>
    <string name="pref_DataStorage">Data &amp; Storage</string>
    <string name="pref_CLearCache_title">Clear cache</string>
    <string name="pref_CLearCache_summary">Remove all the downloaded pictures</string>
    <string name="pref_CLearAll_title">Clear All</string>
    <string name="pref_CLearAll_summary">Removes all downloaded pictures as well as markers on the database</string>
    <string name="pref_CLearHistory_title">Clear search history</string>
    <string name="pref_CLearHistory_summary">Clear the places that I have searched</string>
    <string name="pref_CacheSize_title">Cache size</string>
    <string name="pref_CacheSize_summary">Size in MB for the cache</string>
    <string name="pref_CacheSizeDialog_title">Cache size</string>
    <string name="pref_CacheSizeDialog_message">Choose a value in MB for the cache. A picture usually is 50 KB and you can store around 200 pictures in 10MB</string>
    <string name="pref_MarkerPerPage_title">Markers per page</string>
    <string name="pref_MarkerPerPage_summary">Numbers of markers loaded at the same time</string>
    <string name="pref_MarkerPerPageDialog_title">Markers per Page</string>
    <string name="pref_MarkerPerPageDialog_message">Based on the graphical capabilities of your device, a high volume of markers can cause a lose of responsiveness. You can choose the amount of markers you want to load at the same time based on your own preferences.</string>
    <string name="pref_Visuals">Visuals</string>
    <string name="pref_UseSatellite_title">Use satellite images</string>
    <string name="desc_drag">Drag the marker</string>
    <string name="desc_MarkerDialogImage">Drag the marker</string>
    <string name="desc_buttonLock">Center the map in your location</string>
    <string name="desc_buttonGallery">Open a gallery from the collected markers</string>
    <string name="desc_buttonLayerUp">Layer Up</string>
    <string name="desc_buttonAddMarker">Place a marker in this map</string>
    <string name="desc_buttonUploadMarker">Upload to the marked location</string>
    <string name="desc_buttonNextPage">Load next page of markers</string>
    <string name="desc_buttonPrevPage">Load previous page of markers</string>
    <string name="desc_buttonZoomIn">Zoom in</string>
    <string name="desc_buttonZoomOut">Zoom out</string>
    <string name="desc_buttonCancelMarker">Cancel this marker</string>
    <string name="desc_imageViewLogo">NDSU Logo, North Dakota State University</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_wellcome_screen">WellcomeScreenActivity</string>
    <string name="text_activity_wellcome_screen">The following application was developed in NDSU under the direction of Dr. Anne Denton from the Computer Science Department.\nThe project came out of a course project in NDSUs course CSci 372: Comparative Programming Languages.\n\nThe project was later reimplemented thanks to Adam Helsene, Anne Denton, Cesar Ramirez and Justin Andersen\n\nFor further questions please contact anne.denton@gmail.com.</string>
    <string name="crash_toast_text">Preparing error report</string>
    <string name="crash_dialog_title">Flood Monitor has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>

</resources>