<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_GPSLocation" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_GPSEnabled"
            android:title="@string/pref_GPSEnabled_title" />

        <ListPreference
            android:dependency="pref_GPSEnabled"
            android:entries="@array/updateInterval"
            android:entryValues="@array/updateIntervalValues"
            android:key="updates_interval"
            android:summary="@string/pref_UpdateInterval_summary"
            android:title="@string/pref_UpdateInterval_title" />

        <Preference
            android:dependency="pref_GPSEnabled"
            android:key="pref_UpdateNow"
            android:summary="@string/pref_UpdateNow_summary"
            android:title="@string/pref_UpdateNow_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_DataStorage" >
        <Preference
            android:key="pref_ClearCache"
            android:summary="@string/pref_CLearCache_summary"
            android:title="@string/pref_CLearCache_title" />
        <EditTextPreference android:title="@string/pref_CacheSize_title" android:key="pref_CacheSize" android:summary="@string/pref_CacheSize_summary" android:dialogMessage="@string/pref_CacheSizeDialog_message" android:dialogTitle="@string/pref_CacheSizeDialog_title"/>
    </PreferenceCategory>

</PreferenceScreen>