<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuItemPlaceMarker"
        android:showAsAction="withText|always"
        android:title="@string/text_PlaceMarker">
    </item>
    <item
        android:id="@+id/menuItemUpload"
        android:showAsAction="withText|always"
        android:title="@string/text_Upload">
    </item>
    <item
        android:id="@+id/menuItemCancel"
        android:showAsAction="withText|always"
        android:title="@string/text_Cancel">
    </item>
    <item
        android:id="@+id/menuItemSettings"
        android:showAsAction="withText"
        android:title="@string/text_Settings">
    </item>
    <item
        android:id="@+id/menuItemHelp"
        android:showAsAction="withText"
        android:title="@string/text_Help">
    </item>
    <item
        android:id="@+id/menuItemAbout"
        android:showAsAction="withText"
        android:title="@string/text_About">
    </item>
    <item
        android:id="@+id/menuItemExit"
        android:showAsAction="withText"
        android:title="@string/text_Exit">
    </item>

</menu>