<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/latitudeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Latitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/latitudeValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/longitudeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Longitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/longitudeValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/commentView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_YourComment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/pictureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Picture"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/pictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ChooseFile" />

            <TextView
                android:id="@+id/textFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_File"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/text_Cancel" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/text_Submit" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>